2012-07-02  H.J. Lu  <hongjiu.lu@intel.com>

	* gas/i386/i386.exp: Don't run rep-bsf nor rep-ret.

	* gas/i386/rep-bsf.d: Removed.
	* gas/i386/rep-bsf.s: Likewise.
	* gas/i386/rep-ret.d: Likewise.
	* gas/i386/rep-ret.s: Likewise.

	* gas/i386/rep-suffix.d: Updated.
	* gas/i386/x86-64-rep-suffix.d: Likewise.
	* gas/i386/ilp32/x86-64-rep-suffix.d: Likewise.

	* gas/i386/rep-suffix.s: Add tests for bsf, bsr and ret.
	* gas/i386/x86-64-rep-suffix.s: Likewise.

2012-06-30  H.J. Lu  <hongjiu.lu@intel.com>

	PR gas/14315
	* gas/elf/common1.d: New file.
	* gas/elf/common1.l: Likewise.
	* gas/elf/common1.s: Likewise.
	* gas/elf/common2.d: Likewise.
	* gas/elf/common2.l: Likewise.
	* gas/elf/common2.s: Likewise.

	* gas/elf/elf.exp: Run common1 and common2.

2012-06-29  Alan Modra  <amodra@gmail.com>

	* gas/lns/lns.exp (lns-common-1): Add crx to alt target list.

2012-06-28  Nick Clifton  <nickc@redhat.com>

	PR gas/14260
	* gas/arm/ldr-t-bad.s: Add test of bogus use of literal pool
	addressing.
	* gas/arm/ldr-t-bad.l: Update expected assembler error message
	output.

2012-06-28  Nick Clifton  <nickc@redhat.com>

	* gas/lns/lns.exp: Use alternate lns-common test for targets
	enabling linker relaxation.
	* gas/lns/lns-big-delta.d: Allow for output from architectures
	with 32-bit addresses.

2012-06-27  Alan Modra  <amodra@gmail.com>

	* gas/i386/rep-ret.s: Zero pad section.
	* gas/i386/rep-ret.d: Update.

2012-06-22  Roland McGrath  <mcgrathr@google.com>

	* gas/i386/rep-ret.d: New file.
	* gas/i386/rep-ret.s: New file.
	* gas/i386/i386.exp: Add the new test.

	* gas/i386/rep-bsf.d: New file.
	* gas/i386/rep-bsf.s: New file.
	* gas/i386/i386.exp: Add the new test.

2012-06-13  H.J. Lu  <hongjiu.lu@intel.com>

	* gas/i386/ilp32/x86-64-dc_a.d: New.
	* gas/i386/ilp32/x86-64-dc_a.s: Likewise.

2012-06-11  Andreas Schwab  <schwab@linux-m68k.org>

	* gas/ppc/e500mc.d: Update.
	* gas/ppc/476.d: Update.

2012-06-07  H.J. Lu  <hongjiu.lu@intel.com>
