@@ -16,5 +16,6 @@ Disassembly of section .text:
   11:	f3 48 ab[ 	]+rep stosq %rax,%es:\(%rdi\)
   14:	f3 0f bc c1[	 ]+tzcntl %ecx,%eax
   18:	f3 0f bd c1[	 ]+lzcntl %ecx,%eax
-  1c:	f3 c3[	 ]+repz retq 
+  1c:	f3 c3[	 ]+repz retq\s*
+  1e:	f3 90[	 ]+pause\s*
 #pass
