@@ -14,3 +14,5 @@ _start:
 	rep bsr %ecx, %eax
 
 	rep ret
+
+	rep nop
