@@ -1,3 +1,11 @@
+2012-07-02  Roland McGrath  <mcgrathr@google.com>
+
+	* gas/i386/rep-suffix.s: Add 'rep nop' case.
+	* gas/i386/x86-64-rep-suffix.s: Likewise.
+	* gas/i386/rep-suffix.d: Updated.
+	* gas/i386/x86-64-rep-suffix.d: Likewise.
+	* gas/i386/ilp32/x86-64-rep-suffix.d: Likewise.
+
 2012-07-02  H.J. Lu  <hongjiu.lu@intel.com>
 
 	* gas/i386/i386.exp: Don't run rep-bsf nor rep-ret.
